--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,6 @@
       "WeAreDevelopers\\SecureLink\\": "src/"
     }
   },
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "prefer-stable": true
 }
